--- a/CallYourMother/AndroidManifest.xml
+++ b/CallYourMother/AndroidManifest.xml
@@ -24,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <service
+            android:name="com.callyourmother.NotifyUser"
+            android:exported="false" >
+        </service>
+        
     </application>
 
 </manifest>
