--- a/CallYourMother/AndroidManifest.xml
+++ b/CallYourMother/AndroidManifest.xml
@@ -5,16 +5,16 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="17"
+        android:minSdkVersion="15"
         android:targetSdkVersion="18" />
-    
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
-        
+        android:label="@string/app_name" >
         <activity
             android:name="com.callyourmother.MainActivity"
             android:label="@string/app_name" >
@@ -24,11 +24,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <service
+        
+        <activity
+            android:name="com.callyourmother.UpdateContactTransactions"
+            android:label="@string/app_name" >
+            
+        </activity>
+
+        <service
             android:name="com.callyourmother.NotifyUser"
             android:exported="false" >
         </service>
-        
     </application>
 
 </manifest>
