UI: Add a circle class and xml changes
"add a circle" button now starts adding activity

--- a/CallYourMother/AndroidManifest.xml
+++ b/CallYourMother/AndroidManifest.xml
@@ -25,6 +25,8 @@
             </intent-filter>
         </activity>
         
+        <activity android:name="AddCircleActivity"></activity>
+        
         <activity
             android:name="com.callyourmother.UpdateContactTransactions"
             android:label="@string/app_name" >
