--- a/CallYourMother/AndroidManifest.xml
+++ b/CallYourMother/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         
         <activity android:name="AddCircleActivity"></activity>
+         <activity android:name="NotificationActivity"></activity>
         
         <activity
             android:name="com.callyourmother.UpdateContactTransactions"
