--- a/CallYourMother/AndroidManifest.xml
+++ b/CallYourMother/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -24,16 +25,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="com.callyourmother.AddCircleActivity"></activity>
-         <activity android:name="com.callyourmother.NotificationActivity"></activity>
-          <activity android:name="com.callyourmother.ViewCircle"></activity>
-           <activity android:name="com.callyourmother.EditCircleActivity"></activity>
-        
+        <activity android:name="com.callyourmother.AddCircleActivity" >
+        </activity>
+        <activity android:name="com.callyourmother.NotificationActivity" >
+        </activity>
+        <activity android:name="com.callyourmother.ViewCircle" >
+        </activity>
+        <activity android:name="com.callyourmother.EditCircleActivity" >
+        </activity>
         <activity
             android:name="com.callyourmother.UpdateContactTransactions"
             android:label="@string/app_name" >
-            
         </activity>
 
         <service
